<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Akirachix</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="buttonfirstname">firstname</string>
    <string name="buttonsecondname">secondname</string>
    <string name="btnemail">email</string>
    <string name="btnpassword">password</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_android">AndroidActivity</string>
    <string name="title_activity_adroid_test_main">AdroidTestMainActivity</string>
    <string name="title_activity_legister">MainActivity</string>
    <string name="title_activity_geeks">Geeks</string>

</resources>
