<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp" 
    android:background="@color/green"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/buttonfirstname"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:text="@string/buttonfirstname"
        android:layout_marginBottom="20dp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

        <requestFocus />
        
    <EditText
        android:id="@+id/buttonsecondname"
        android:layout_width="170dp"
         android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/grey"
        android:inputType="textPersonName" 
        android:text="@string/buttonsecondname"/>

    <EditText
        android:id="@+id/btnemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:inputType="textEmailAddress" 
        android:text="@string/btnemail"/>

    <TextView
        android:id="@+id/btnpassword"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/grey"
        android:text="@string/btnpassword"
        android:textColor="@color/white"
        android:textSize="20sp" />
   
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/grey"
        android:text="@string/btnLogin"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/black"
        android:text="@string/btnCancel"
        android:textColor="@color/white"
        android:textSize="25sp" />
  
</LinearLayout>
